--- a/locales/ms.json
+++ b/locales/ms.json
@@ -1,3 +1,4 @@
+
 {
     "appTagline": "Di Mana Al-Quran Berbicara Kepada Anda",
     "welcomeSubtitle": "Perjalanan terpandu anda ke dalam Al-Quran.",
@@ -268,23 +269,23 @@
     "go": "Pergi",
     "bookmarkThisVerse": "Tanda buku ayat ini",
     "viewVerseTafsir": "Lihat Tafsir untuk ayat ini",
-    "previousPage": "Sebelumnya",
+    "previousPage": "Sebelum",
     "nextPage": "Seterusnya",
     "keyThemes": "Tema Utama",
     "keyThemesOfThePage": "Tema Utama Halaman",
     "sharePageInsight": "Kongsi Wawasan",
     "sharePageInsightTitle": "Wawasan Halaman {page}",
     "shareExplanation": "Kongsi Penjelasan",
-    "shareExplanationTitle": "Penjelasan daripada Noor",
-    "explanationCopied": "Penjelasan disalin ke papan keratan!",
+    "shareExplanationTitle": "Penjelasan dari Noor",
+    "explanationCopied": "Penjelasan disalin ke papan klip!",
     "adjustFontSize": "Laras saiz fon",
     "explanationByNoor": "Penjelasan oleh Noor",
-    "pageContinuityTitle": "Kesinambungan Tema",
-    "pageContinuityPrev": "Dari Halaman Sebelum",
-    "pageContinuityNext": "Ke Halaman Seterusnya",
+    "pageContinuityTitle": "Kesinambungan Tematik",
+    "pageContinuityPrev": "Dari Sebelum",
+    "pageContinuityNext": "Ke Seterusnya",
     "reflectDeeper": "Renung Lebih Dalam",
-    "generatingDeeperActions": "Menjana tindakan yang lebih mendalam...",
-    "deeperTazakkurTitle": "Tazakkur Mendalam",
+    "generatingDeeperActions": "Menjana tindakan lebih mendalam...",
+    "deeperTazakkurTitle": "Tazakkur Lebih Mendalam",
     "backToMain": "Utama",
     "jumpToPage": "Halaman",
     "currentPage": "Halaman",
@@ -293,32 +294,32 @@
     "playRangeAudio": "Mainkan Julat",
     "pauseRangeAudio": "Jeda Julat",
     "societalMisconceptionsTitle": "Minda Quran vs Minda Masyarakat",
-    "societalMisconceptionsInfo": "Bahagian ini tidak bertujuan untuk menyalahkan atau mengkritik amalan masyarakat, tetapi untuk mengajak renungan tentang bagaimana al-Quran membimbing kita untuk berfikir dan bertindak. Al-Quran diturunkan untuk membetulkan salah faham dalam minda kita — apa yang saya rasa betul tidak semestinya betul di sisi Allah.",
-    "explainMoreButton": "Jelaskan lebih lanjut",
+    "societalMisconceptionsInfo": "Bahagian ini bukan bertujuan untuk menyalahkan atau mengkritik amalan masyarakat, tetapi untuk mengajak renungan tentang bagaimana al-Quran membimbing kita untuk berfikir dan bertindak. Al-Quran diturunkan untuk membetulkan salah faham dalam minda kita — apa yang saya rasa betul tidak semestinya betul di sisi Allah.",
+    "explainMoreButton": "Jelaskan Lagi Pada Saya",
     "findGuidancePageTitle": "Cari Petunjuk untuk Hati Anda",
     "findGuidancePageIntro": "Hidup boleh menjadi mencabar. Huraikan perasaan anda, dan biarkan kami mencari ayat-ayat yang mungkin membawa anda ketenangan dan perspektif.",
-    "findGuidancePlaceholder": "Huraikan perasaan anda atau cabaran yang anda hadapi (cth., saya hilang sabar dengan anak-anak saya...)",
+    "findGuidancePlaceholder": "Huraikan perasaan anda atau cabaran yang anda hadapi (cth., Saya hilang sabar dengan anak-anak...)",
     "findGuidanceButton": "Cari Petunjuk",
     "findGuidanceLoading": "Mencari petunjuk...",
-    "findGuidanceResultsTitle": "Berikut adalah beberapa ayat yang mungkin dapat membantu:",
-    "findGuidanceNoResults": "Tidak dapat mencari ayat-ayat khusus untuk isu ini. Cuba nyatakan dengan cara lain.",
+    "findGuidanceResultsTitle": "Berikut adalah beberapa ayat yang mungkin membantu:",
+    "findGuidanceNoResults": "Tidak dapat mencari ayat khusus untuk isu ini. Cuba nyatakan semula.",
     "congratsTitle": "Tazakkur yang hebat, {name}!",
     "congratsSubtitle": "Anda telah mendapat 10 mata untuk renungan anda.",
     "quote1": "Sebaik-baik kamu adalah orang yang belajar al-Quran dan mengajarkannya.",
-    "quote2": "Sesungguhnya, dengan mengingati Allah hati menjadi tenteram.",
+    "quote2": "Sesungguhnya, dengan mengingati Allah, hati menjadi tenteram.",
     "quote3": "Setiap langkah renungan membawa anda lebih dekat kepada cahaya.",
-    "quote4": "Satu ayat yang direnung lebih baik daripada seratus yang dibaca tanpa kefahaman.",
+    "quote4": "Satu ayat yang direnungi lebih baik daripada seratus yang dibaca tanpa pemahaman.",
     "nextAyahButton": "Renungi Ayat Seterusnya",
     "anotherVerseButton": "Pilih Ayat Lain",
     "fullHistoryTitle": "Sejarah Penuh Renungan",
-    "historyEntries": "{count} entri",
+    "historyEntries": "{count} catatan",
     "searchHistory": "Cari mengikut Surah atau kandungan nota...",
     "noHistoryFound": "Tiada renungan ditemui.",
     "tryDifferentSearch": "Cuba istilah carian yang berbeza.",
     "backButton": "Kembali",
     "settingsTitle": "Tetapan",
     "firstTimeSetupTitle": "Satu Langkah Terakhir: Sediakan Kunci Anda",
-    "firstTimeSetupBody": "Untuk menguasakan renungan AI, MyQuran Journal memerlukan kunci API Google Gemini. Ini adalah persediaan sekali sahaja. Aplikasi tidak dapat berfungsi tanpanya.",
+    "firstTimeSetupBody": "Untuk menggerakkan renungan AI, MyQuran Journal memerlukan kunci API Google Gemini. Ini adalah persediaan sekali sahaja. Aplikasi tidak boleh berfungsi tanpanya.",
     "changePictureButton": "Tukar Gambar",
     "imageSizeHint": "PNG, JPG sehingga 2MB.",
     "nameLabel": "Nama",
@@ -326,7 +327,7 @@
     "male": "Lelaki",
     "female": "Perempuan",
     "iAmAlsoA": "Saya juga seorang...",
-    "roleHuffaz": "Huffaz (Penghafal)",
+    "roleHuffaz": "Huffaz (Penghafaz)",
     "roleDaie": "Daie (Pendakwah)",
     "roleFather": "Bapa",
     "roleMother": "Ibu",
@@ -347,7 +348,7 @@
     "countryPlaceholder": "cth., Malaysia",
     "searchCountry": "Negara Saya",
     "tadabburDifficultyLabel": "Tahap Kesukaran Tadabbur",
-    "tadabburDifficultyHelp": "Mengawal kerumitan refleksi AI. Aplikasi akan memilih tahap secara rawak daripada kumpulan pilihan anda.",
+    "tadabburDifficultyHelp": "Mengawal kerumitan renungan AI. Aplikasi akan memilih tahap secara rawak dari kumpulan pilihan anda.",
     "difficultyEasy": "Mudah",
     "difficultyIntermediate": "Sederhana",
     "difficultyHigh": "Tinggi",
@@ -367,7 +368,7 @@
     "apiKeyLabel": "Kunci API Gemini",
     "createApiKeyButton": "+ Cipta Kunci API",
     "apiKeyPlaceholder": "Tampal kunci API anda di sini",
-    "apiKeyHelp": "Dapatkan kunci anda dari <a href='https://aistudio.google.com/app/apikey' target='_blank' rel='noopener noreferrer' class='underline'>Google AI Studio</a>. Ia hanya disimpan pada peranti anda.",
+    "apiKeyHelp": "Dapatkan kunci anda dari <a href='https://aistudio.google.com/app/apikey' target='_blank' rel='noopener noreferrer' class='underline'>Google AI Studio</a>. Ia disimpan hanya pada peranti anda.",
     "themeLabel": "Tema",
     "lightTheme": "Cerah",
     "darkTheme": "Gelap",
@@ -392,36 +393,36 @@
     "deleteConfirmationText": "Adakah anda pasti mahu memadam kategori \"{name}\"? Tindakan ini tidak boleh dibatalkan.",
     "confirmDelete": "Sahkan Padam",
     "shareApp": "Kongsi Aplikasi Ini",
-    "shareAppText": "Jom renung al-Quran bersama saya! Saya menggunakan MyQuran Journal.",
-    "shareAppCopied": "Pautan disalin ke papan keratan!",
+    "shareAppText": "Jom renungi Al-Quran bersama saya! Saya menggunakan MyQuran Journal.",
+    "shareAppCopied": "Pautan disalin ke papan klip!",
     "feedbackTitle": "Maklum Balas atau Ulasan",
     "feedbackPlaceholder": "Taip pendapat, cadangan, atau isu anda di sini...",
     "sendWhatsApp": "Hantar melalui WhatsApp",
-    "feedbackMessageHeader": "Maklum balas daripada {name}:",
+    "feedbackMessageHeader": "Maklum balas dari {name}:",
     "manageBookmarks": "Tanda Buku Ayat",
     "bookmarkNoteLabel": "Nota Saya",
     "bookmarkNotePlaceholder": "Tambah nota peribadi... (cth., Peringatan tentang kesabaran)",
-    "pinToTopLabel": "Semat ke Atas",
-    "pinLimitWarning": "Anda hanya boleh menyemat sehingga 3 ayat.",
+    "pinToTopLabel": "Sematkan ke Atas",
+    "pinLimitWarning": "Anda hanya boleh sematkan sehingga 3 ayat.",
     "deleteBookmarkButton": "Padam Penanda Buku",
     "deleteBookmarkConfirm": "Adakah anda pasti mahu memadam penanda buku ini sepenuhnya? Ini akan mengeluarkannya dari semua kategori.",
     "addToCategory": "Tambah ke kategori",
     "newCategoryPrompt": "Atau cipta yang baharu:",
     "categoryNamePlaceholder": "Nama Kategori (cth., Motivasi)",
     "createCategory": "Cipta & Tambah",
-    "noCategoriesYet": "Belum ada kategori. Cipta satu di bawah untuk mula menanda buku!",
+    "noCategoriesYet": "Tiada kategori lagi. Cipta satu di bawah untuk mula menanda buku!",
     "noNoteAdded": "Tiada nota ditambah.",
     "shareInsight": "Kongsi Wawasan",
     "shareSegment": "Kongsi Segmen",
-    "shareSegmentTitle": "Kongsi Wawasan {surahName} {verseKey}",
-    "sharedInsightTitle": "Wawasan mengenai al-Quran {verseKey}",
-    "shareIntroTa": "Dari ayat ini, pemahaman saya tentang hubungan saya dengan Allah ialah:",
+    "shareSegmentTitle": "Kongsi Wawasan tentang {surahName} {verseKey}",
+    "sharedInsightTitle": "Wawasan tentang Al-Quran {verseKey}",
+    "shareIntroTa": "Dari ayat ini, pemahaman saya tentang hubungan dengan Allah ialah:",
     "shareIntroTi": "Dari segi ibadah dan kehambaan, ayat ini membimbing saya untuk memahami bahawa:",
     "shareIntroTs": "Dalam kehidupan praktikal dan akhlak, ayat ini menunjukkan kepada saya bahawa:",
     "shareIntroTd": "Sebagai seorang pendakwah, ayat ini memberi inspirasi kepada saya untuk menyampaikan mesej bahawa:",
-    "insightCopied": "Wawasan {title} disalin ke papan keratan!",
-    "insightCopiedToClipboard": "Wawasan penuh disalin ke papan keratan!",
-    "reflectionCopied": "Refleksi disalin ke papan keratan!",
+    "insightCopied": "Wawasan {title} disalin ke papan klip!",
+    "insightCopiedToClipboard": "Wawasan penuh disalin ke papan klip!",
+    "reflectionCopied": "Renungan disalin ke papan klip!",
     "spinnerReadingVerse": "Membaca ayat...",
     "spinnerGenerating": "Menjana wawasan...",
     "spinnerTakeMoment": "Ini mungkin mengambil sedikit masa.",
@@ -430,25 +431,25 @@
     "errorInvalidAyah": "Sila masukkan Ayat yang sah untuk Surah ini (1-{max}).",
     "errorUnknown": "Berlaku ralat yang tidak diketahui.",
     "errorImageSize": "Imej terlalu besar. Sila pilih imej di bawah 2MB.",
-    "errorCropImage": "Tidak dapat memangkas imej.",
-    "errorApiKeyMissing": "Kunci API Gemini tiada. Sila tambahkannya dalam Tetapan untuk membolehkan refleksi.",
-    "errorBlockedRequest": "Permintaan anda nampaknya disekat. Ini sering disebabkan oleh sambungan pelayar (seperti penyekat iklan) atau VPN.",
+    "errorCropImage": "Tidak dapat memotong imej.",
+    "errorApiKeyMissing": "Kunci API Gemini tiada. Sila tambahkannya dalam Tetapan untuk membolehkan renungan.",
+    "errorBlockedRequest": "Permintaan anda nampaknya disekat. Ini selalunya disebabkan oleh sambungan pelayar (seperti penyekat iklan) atau VPN.",
     "fixBlockedRequestTitle": "Cara menyelesaikan ini:",
     "fixBlockedRequestStep1": "<strong>Cuba Tetingkap Inkognito/Peribadi:</strong> Ini biasanya melumpuhkan sambungan secara lalai.",
-    "fixBlockedRequestStep2": "<strong>Periksa Sambungan Pelayar:</strong> Lumpuhkan sementara mana-mana penyekat iklan atau sambungan berkaitan privasi untuk laman web ini.",
+    "fixBlockedRequestStep2": "<strong>Periksa Sambungan Pelayar:</strong> Lumpuhkan sementara mana-mana penyekat iklan atau sambungan berkaitan privasi untuk laman ini.",
     "fixBlockedRequestStep3": "<strong>Periksa VPN/Proksi:</strong> Cuba lumpuhkan sementara perkhidmatan VPN atau proksi anda.",
     "disclaimerTitle": "Penafian Penting",
     "disclaimerIntro": "Sebelum anda meneruskan, sila baca dan akui perkara berikut:",
-    "disclaimerPoint1": "Kandungan, terutamanya refleksi yang dijana oleh AI (Tadabbur & Tazakkur), mungkin mengandungi kesilapan atau ketidaktepatan. Ia adalah alat untuk berfikir, bukan sumber hukum agama (fatwa).",
-    "disclaimerPoint2": "Sentiasa berhati-hati. Kami amat menasihatkan anda untuk merujuk kepada ulama yang berkelayakan dan sumber-sumber yang mantap untuk pengetahuan Islam yang muktamad.",
-    "disclaimerPoint3": "Walaupun kami berusaha untuk memastikan aplikasi berfungsi seperti yang diharapkan, gangguan sistem atau isu-isu lain yang tidak dijangka boleh berlaku. Kami tidak bertanggungjawab atas kesilapan yang timbul daripada kejadian sedemikian.",
-    "disclaimerPoint4": "Anda bertanggungjawab sepenuhnya ke atas pemahaman dan tindakan anda. Pembangun dan pencipta aplikasi ini tidak bertanggungjawab atas sebarang salah faham atau salah tafsir kandungan yang disediakan.",
+    "disclaimerPoint1": "Kandungan, terutamanya renungan yang dijana oleh AI (Tadabbur & Tazakkur), mungkin mengandungi ralat atau ketidaktepatan. Ia adalah alat untuk berfikir, bukan sumber hukum agama (fatwa).",
+    "disclaimerPoint2": "Sentiasa berhati-hati. Kami amat menasihatkan anda untuk merujuk kepada ulama yang boleh dipercayai dan berkelayakan serta sumber-sumber yang mantap untuk pengetahuan Islam yang muktamad.",
+    "disclaimerPoint3": "Walaupun kami berusaha untuk memastikan aplikasi berfungsi seperti yang diharapkan, gangguan sistem atau isu-isu lain yang tidak dijangka boleh berlaku. Kami tidak bertanggungjawab atas ralat yang timbul daripada kejadian sedemikian.",
+    "disclaimerPoint4": "Anda bertanggungjawab sepenuhnya atas pemahaman dan tindakan anda. Pembangun dan pencipta aplikasi ini tidak akan bertanggungjawab atas sebarang salah faham atau salah tafsir kandungan yang disediakan.",
     "disclaimerCheckbox": "Saya telah membaca, memahami, dan menerima penafian ini.",
     "disclaimerProceedButton": "Teruskan",
     "askNoorButton": "Tanya Noor",
     "goDeeperButton": "Lebih Dalam",
     "helperTitle": "Tanya Noor tentang ayat ini",
-    "helperIntro": "Helo! Saya Noor, pembantu peribadi anda. Adakah anda mempunyai sebarang soalan tentang ayat ini atau renungan yang diberikan? Jangan ragu untuk bertanya kepada saya.",
+    "helperIntro": "Assalamualaikum! Saya Noor, pembantu peribadi anda. Adakah anda mempunyai sebarang soalan tentang ayat ini atau renungan yang diberikan? Jangan ragu untuk bertanya kepada saya.",
     "helperPlaceholder": "Tanya soalan...",
     "easyGroup": "Mudah",
     "intermediateGroup": "Sederhana",
@@ -462,26 +463,26 @@
     "L6": "Berasaskan Kata Kunci",
     "L7": "Konseptual",
     "L8": "Komprehensif",
-    "L1_desc": "Merenung satu ayat sahaja.",
-    "L2_desc": "Merenung ayat bersama ayat sebelum dan selepasnya.",
-    "L3_desc": "Menghubungkan mesej ayat dengan nama Surah.",
-    "L4_desc": "Menjelaskan bagaimana ayat ini menyumbang kepada tema utama Surah.",
-    "L5_desc": "Menganalisis ayat berdasarkan pembukaan dan penutup Surah/tema.",
-    "L6_desc": "Mengenal pasti kata kunci Arab dalam ayat dan menjejaki penggunaannya di tempat lain.",
-    "L7_desc": "Mengenal pasti konsep teras Islam dalam ayat dan membincangkannya dengan merujuk kepada ayat-ayat lain.",
-    "L8_desc": "Melakukan analisis pelbagai lapisan termasuk konteks, tema, konsep, dan menyediakan satu Hadis yang sahih dan relevan (teks, terjemahan, sumber).",
+    "L1_desc": "Renungi satu ayat tunggal.",
+    "L2_desc": "Renungi ayat bersama ayat sebelum dan selepasnya.",
+    "L3_desc": "Hubungkan mesej ayat dengan nama Surah.",
+    "L4_desc": "Jelaskan bagaimana ayat ini menyumbang kepada tema utama Surah.",
+    "L5_desc": "Analisis ayat berdasarkan tema pembukaan dan penutup Surah.",
+    "L6_desc": "Kenal pasti kata kunci Arab dalam ayat dan jejak penggunaannya di tempat lain.",
+    "L7_desc": "Kenal pasti konsep teras Islam dalam ayat dan bincangkannya dengan merujuk kepada ayat lain.",
+    "L8_desc": "Lakukan analisis pelbagai lapisan termasuk konteks, tema, konsep, dan berikan satu Hadis yang sahih dan relevan (teks, terjemahan, sumber).",
     "noorIntroTitle": "Kenali Noor, Rakan AI Anda",
-    "noorIntroText": "Noor (نُور) bermaksud cahaya. Dia adalah pemandu berkuasa AI anda yang direka untuk membantu anda dengan Tadabbur (renungan) dan Tazakkur (peringatan). Tujuannya adalah untuk membantu, bukan mengajar, dan untuk membantu anda berhubung secara peribadi dengan mesej al-Quran. Ciri-ciri terasnya ialah:",
+    "noorIntroText": "Noor (نُور) bermaksud cahaya. Dia adalah pemandu berkuasa AI anda yang direka untuk membantu anda dengan Tadabbur (renungan) dan Tazakkur (peringatan). Tujuannya adalah untuk membantu, bukan mengajar, dan menolong anda berhubung secara peribadi dengan mesej al-Quran. Sifat-sifat terasnya ialah:",
     "noorTraitGentleTitle": "Lembut & Bijaksana",
     "noorTraitGentleText": "Bercakap dengan tenang dan hormat, dengan adab dan hikmah.",
     "noorTraitSupportiveTitle": "Pemandu yang Menyokong",
     "noorTraitSupportiveText": "Membantu anda langkah demi langkah dalam memahami ayat-ayat al-Quran tanpa menghakimi.",
     "noorTraitGroundedTitle": "Berasaskan Wahyu",
-    "noorTraitGroundedText": "Semua respons adalah berdasarkan konteks yang diberikan dari ayat dan analisisnya sahaja. Noor tidak menggunakan pengetahuan luaran.",
+    "noorTraitGroundedText": "Semua respons adalah berdasarkan konteks yang diberikan dari ayat dan analisisnya sahaja. Noor tidak menggunakan pengetahuan luar.",
     "noorTraitBoundariesTitle": "Mematuhi Batasan",
     "noorTraitBoundariesText": "Tidak pernah memberi fatwa. Peranannya adalah untuk memudahkan renungan, bukan untuk mengeluarkan fatwa agama.",
     "viewTafsir": "Lihat Tafsir",
-    "tafsirModalTitle": "Tafsir Ilmiah",
+    "tafsirModalTitle": "Tafsir Ulama",
     "loadingTafsir": "Memuatkan Tafsir...",
     "errorTafsir": "Tidak dapat memuatkan Tafsir untuk ayat ini.",
     "supportMission": "Sokong Misi Kami",
@@ -489,13 +490,13 @@
     "supportModalBody1": "MyQuran Journal adalah, dan akan sentiasa, <strong>percuma untuk semua</strong>. Ia adalah projek wakaf oleh Yayasan At-Tibyan.",
     "supportModalBody2": "Jika anda mendapati aplikasi ini bermanfaat, anda boleh membantu kami mengekalkan aktiviti dakwah kami dengan memberi sumbangan. Sokongan anda membantu kami menampung kos operasi dan membiayai projek-projek baharu untuk menyebarkan ilmu.",
     "supportModalBody3": "Pertimbangkan sumbangan berulang yang kecil hanya <strong>$1/bulan</strong>. Setiap sumbangan membantu kami meneruskan kerja kami.",
-    "supportButtonContribute": "Sumbang $1/bulan (melalui Stripe)",
+    "supportButtonContribute": "Sumbang $1/sebulan (melalui Stripe)",
     "supportButtonWebsite": "Ketahui Tentang Projek Kami",
     "singleVerse": "Satu Ayat",
     "verseRange": "Julat Ayat",
     "from": "Dari",
     "to": "Hingga",
-    "deleteReflection": "Padam Renungan",
-    "deleteReflectionConfirm": "Adakah anda pasti mahu memadamkan renungan ini? Tindakan ini tidak boleh ditarik balik.",
-    "includeMindsetSection": "Sertakan bahagian 'Minda Quran vs Minda Masyarakat' dalam catatan jurnal"
+    "deleteReflection": "Padam",
+    "deleteReflectionConfirm": "Adakah anda pasti mahu memadamkan renungan ini? Tindakan ini tidak boleh dibatalkan.",
+    "includeMindsetSection": "Sertakan bahagian 'Minda Quran' dalam jurnal"
 }
